# dap-gui

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUGGER_IMPROVEMENTS.md  DESIGN_NOTES.md  Makefile  PLAN.md  README.md  REFACTOR_PLAN.md  attach.py  build.zig  default.nix  example.py  flake.nix  go.mod  go.sum  launch.json  main.go  mise.toml  release-plz.toml  requirements.in  requirements.txt  run_server.sh  rust-toolchain.toml  send_dap_message.py  shell.nix  test.py  testclient.py
.config/: wt.toml
app/src-tauri/: Cargo.toml  tauri.conf.json
crates/async-transport/: CHANGELOG.md  Cargo.toml
crates/async-transport/src/: codec.rs  error.rs  lib.rs  message.rs  reader.rs  transport.rs  writer.rs
crates/async-transport/src/testing/: memory.rs  mod.rs
crates/dap-iced/: Cargo.toml  ICED_GUI_POC_DESIGN.md
crates/dap-iced/src/: debugger_bridge.rs  main.rs  message.rs  state.rs
crates/dap-iced/src/widgets/: call_stack.rs  console.rs  control_bar.rs  mod.rs  source_view.rs  variables.rs
crates/debugger/: CHANGELOG.md  Cargo.toml  TRANSPORT2_INTEGRATION_PLAN.md
crates/debugger/src/: async_debugger.rs  async_event.rs  async_internals.rs  commands.rs  debugger.rs  internals.rs  lib.rs  pending_requests.rs  request_types.rs  state.rs  testing.rs  types.rs  utils.rs
crates/debugger/tests/: debugger.rs
crates/gui/: CHANGELOG.md  Cargo.toml
crates/gui-poc/: Cargo.toml  README.md
crates/gui-poc/examples/: test_nav.rs
crates/gui-poc/src/: ast.rs  async_bridge.rs  main.rs
crates/gui/examples/: scrolling_textarea.rs
crates/gui/src/: async_bridge.rs  browse.rs  code_view.rs  fonts.rs  main.rs  renderer.rs
crates/gui/src/ui/: call_stack.rs  control_panel.rs  file_picker.rs  mod.rs  status_bar.rs
crates/gui2/: Cargo.toml
crates/gui2/examples/: canvas.rs  code_view.rs
crates/gui2/src/: args.rs  debugger_app.rs  highlight.rs  lib.rs  main.rs  message.rs  state.rs
crates/gui2/src/code_view/: mod.rs  render_breakpoints.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: debugpy.rs  delve.rs  lib.rs  util.rs
crates/state/: CHANGELOG.md  Cargo.toml
crates/state/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: client.rs  events.rs  lib.rs  request_store.rs  requests.rs  responses.rs  types.rs
crates/transport/src/io/: memory.rs  mod.rs  tcp.rs  tests.rs
crates/transport/src/reader/: hand_written_reader.rs  mod.rs
crates/transport/tests/: end_to_end.rs  in_memory_transport.rs
crates/transport2/: Cargo.toml  DESIGN.md
crates/transport2/src/: codec.rs  lib.rs  message.rs  reader.rs  transport.rs  writer.rs
crates/transport2/src/testing/: memory.rs  mod.rs
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui-poc/: Cargo.toml  state.json
crates/tui-poc/.opencode/plans/: debugger-interface.md
crates/tui-poc/src/: async_bridge.rs  fuzzy.rs  main.rs
crates/tui/src/: app.rs  async_bridge.rs  event.rs  input.rs  line_editor.rs  main.rs  session.rs  syntax.rs  theme.rs
crates/tui/src/ui/: breakpoints.rs  call_stack.rs  code_view.rs  controls_bar.rs  evaluate_popup.rs  file_browser.rs  file_picker.rs  help.rs  mod.rs  output.rs  repl.rs  status_bar.rs  threads.rs  variables.rs
crates/tui/src/ui/snapshots/: dap_tui__ui__snapshot_tests__breakpoints_in_running_mode.snap  dap_tui__ui__snapshot_tests__help_overlay.snap  dap_tui__ui__snapshot_tests__no_session_empty.snap  dap_tui__ui__snapshot_tests__no_session_with_configs.snap  dap_tui__ui__snapshot_tests__no_session_with_file.snap  dap_tui__ui__snapshot_tests__output_tab_with_lines.snap  dap_tui__ui__snapshot_tests__repl_tab.snap  dap_tui__ui__snapshot_tests__running_mode.snap  dap_tui__ui__snapshot_tests__status_bar_with_error.snap  dap_tui__ui__snapshot_tests__terminated_mode.snap  dap_tui__ui__snapshot_tests__zen_mode_empty.snap  tui__ui__snapshot_tests__help_overlay.snap  (+5 more)
dap-codec/: Cargo.toml
dap-codec/src/: lib.rs
dap-gui-client/: Cargo.toml
dap-gui-client/src/: bindings.rs  client.rs  events.rs  lib.rs  request_store.rs  requests.rs  responses.rs  types.rs
dap-gui-client/tests/: end_to_end.rs  localstack.rs  loop.rs
dap-gui-ui/: Cargo.toml
dap-gui-ui/examples/: keyboard_events.rs  textview.rs
dap-gui-ui/src/: lib.rs  main.rs  syntax_highlighting.rs
dap-spec/: Cargo.toml  build.rs
dap-spec/src/: lib.rs
debugger/: Cargo.toml
debugger/src/: debugger.rs  internals.rs  lib.rs  state.rs  types.rs  waiters.rs
debugger/tests/: debugger.rs
gui/: Cargo.toml
gui/examples/: foo.rs  scrolling_textarea.rs
gui/src/: code_view.rs  components.rs  main.rs  message.rs  renderer.rs
gui/src/ui/: breakpoints.rs  call_stack.rs  control_panel.rs  mod.rs
gui2/: Cargo.toml
gui2/examples/: canvas.rs  code_view.rs
gui2/src/: code_view.rs  highlight.rs  lib.rs  main.rs
gui2/src/code_view/: mod.rs  render_breakpoints.rs
launch_configuration/: Cargo.toml
launch_configuration/examples/: foo.rs
launch_configuration/src/: lib.rs
launch_configuration/testdata/vscode/: localstack-ext.json  localstack.code-workspace
launch_configuration/tests/: test_vscode.rs
pcaplog/: Cargo.toml  Cargo.toml.orig
pcaplog/src/: lib.rs  main.rs
pcaplog/tests/: captures.rs
pythondap/: Cargo.toml  README.md  pyproject.toml  test.py
pythondap/python/pythondap/: cli.py  session.py
pythondap/src/: debugger.rs  launch_configuration.rs  lib.rs
pythondap/tests/: conftest.py  test_debugger.py  test_hooks.py
repl/: Cargo.toml
repl/src/: main.rs
server/: Cargo.toml
server/src/: debugpy.rs  delve.rs  lib.rs
state/: Cargo.toml
state/src/: lib.rs
transport/: Cargo.toml
transport-async/: Cargo.toml
transport-async/src/: codec.rs  decoder.rs  lib.rs  request_store.rs
transport/benches/: parser.rs
transport/src/: client.rs  events.rs  lib.rs  parse.rs  reader.rs  request_store.rs  requests.rs  responses.rs  types.rs
transport/src/reader/: hand_written_reader.rs  mod.rs  nom_reader.rs
transport/tests/: end_to_end.rs  localstack.rs
tui/: Cargo.toml
tui/src/: main.rs
tui/src/widgets/: breakpoints.rs  mod.rs
(+195 files in other folders)
