[workspace]
resolver = "2"

members = [
    "transport",
    "debugger",
    "pythondap",
    "server",
    "pcaplog",
    "gui",
    "state",
    "launch_configuration",
    "dap-codec",
    "gui2",
    "tui",
    "repl",
]

[workspace.dependencies]
eyre = "0.6.12"
color-eyre = "0.6.5"
ctor = "0.6.0"
crossbeam-channel = "0.5.15"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.50", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
dirs = "6.0.0"
dark-light = "1.1.1"

[profile.release]
debug = true
