[package]
name = "dap-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.0"
dap = { version = "0.4.1-alpha1", features = ["client"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["codec"] }

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
