[package]
name = "dap-codec"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
dap = { version = "0.4.1-alpha1", features = ["client"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["net"] }
tokio-util = { version = "0.7.14", features = ["codec"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
