[package]
name = "dap-gui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
oneshot = { version = "0.1.5", default-features = false, features = ["std"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tracing = "0.1.37"

[dev-dependencies]
atty = "0.2.14"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
