[package]
name = "dap-gui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
syntect = "5.0.0"
dap-gui-client = { path = "../dap-gui-client" }
env_logger = "0.10.0"
log = "0.4.19"

[features]
