[package]
name = "dap-gui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
syntect = "5.0.0"
dap-gui-client = { path = "../dap-gui-client" }
clap = { version = "4.3.19", features = ["derive"] }
sentry = { version = "0.31.5", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
sentry = ["dep:sentry"]
