[package]
name = "dap-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
eyre.workspace = true
proc-macro2 = "1.0.92"
serde.workspace = true
serde_json.workspace = true
