[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
server = { path = "../server" }
serde.workspace = true
transport = { path = "../transport" }
dap-codec = { path = "../dap-codec" }
tokio-retry = "0.3.0"
tokio.workspace = true
dirs.workspace = true

[dev-dependencies]
color-eyre.workspace = true
ctor.workspace = true
tracing-subscriber.workspace = true
