[package]
name = "debugger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
server = { path = "../server" }
serde.workspace = true
transport = { path = "../transport" }
retry = "2.1.0"
dirs.workspace = true
launch_configuration = { path = "../launch_configuration" }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
color-eyre.workspace = true
ctor.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tempfile = "3.20.0"
