[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
transport = { path = "../transport" }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
clap = { version = "4.3.19", features = ["derive"] }
sentry = { version = "0.31.5", optional = true, default-features = false, features = [ "rustls", "backtrace", "contexts", "panic", "debug-images" ] }
serde_json = "1.0.106"
serde = { version = "1.0.188", features = ["derive"] }

[features]
sentry = ["dep:sentry"]
