[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
spmc.workspace = true
tracing.workspace = true
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.29"
iced = { git = "https://github.com/iced-rs/iced", rev = "751ea77c29f6eb3d00f45f0a04c833a1d03a425c", features = [ "tokio"] }
sentry = { version = "0.31.5", optional = true, default-features = false, features = [ "rustls", "backtrace", "contexts", "panic", "debug-images" ] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = "0.3.17"
debugger = { path = "../debugger" }
transport = { path = "../transport" }

[features]
sentry = ["dep:sentry"]
