[package]
name = "gui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
iced = { version = "0.12.1", features = ["highlighter", "tokio", "debug", "advanced", "lazy"]}
dark-light = "1.0.0"
iced_aw = "0.8"
