[package]
name = "gui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
iced = { version = "0.12.1", features = [
    "highlighter",
    "tokio",
    "debug",
    "advanced",
    "lazy",
] }
dark-light.workspace = true
iced_aw = "0.9"
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
color-eyre.workspace = true
dirs.workspace = true
state = { path = "../state" }
launch_configuration = { path = "../launch_configuration" }
debugger = { path = "../debugger" }
transport = { path = "../transport" }
crossbeam-channel.workspace = true
sentry = { version = "0.34.0", optional = true, default-features = false, features = [
    "reqwest",
    "rustls",
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
] }

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
sentry = ["dep:sentry"]
