[package]
name = "launch_configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json = "1.0.112"
eyre.workspace = true
ctor.workspace = true

[dev-dependencies]
color-eyre.workspace = true
