[package]
name = "launch_configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json = "1.0.128"
eyre.workspace = true
ctor.workspace = true
transport = { path = "../transport" }
jsonc-parser = { version = "0.23.0", features = ["serde"] }

[dev-dependencies]
color-eyre.workspace = true
