[package]
name = "pcaplog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.12", features = ["derive"] }
etherparse = "0.13.0"
pcap-file = "2.0.0"
serde_json = "1.0.110"
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
transport = { path = "../transport" }

[dev-dependencies]
ctor.workspace = true
glob = "0.3.1"
rstest = "0.18.2"
color-eyre.workspace = true
