[package]
name = "pythondap"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pythondap"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1" }
debugger = { path = "../debugger" }
transport = { path = "../transport" }
launch_configuration = { path = "../launch_configuration" }
crossbeam-channel.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tree-sitter = "0.25.3"
tree-sitter-python = "0.23.6"
