[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
debugger = { path = "../debugger" }
server = { path = "../server" }
transport = { path = "../transport" }
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
