[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
transport = { path = "../transport" }
nix = { version = "0.29.0", features = ["process"] }

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
