[package]
name = "state"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
debugger = { path = "../debugger" }
dirs.workspace = true
tracing.workspace = true
