[package]
name = "transport-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
crossbeam-channel.workspace = true
eyre.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
server = { path = "../server" }
criterion = "0.5.1"
ctor.workspace = true

