[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
dap-codec = { path = "../dap-codec" }
tokio.workspace = true
tokio-util.workspace = true
futures = "0.3.30"
serde_json = "1.0.116"


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
server = { path = "../server" }
tracing-subscriber.workspace = true
