[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
bytes = "1.7.2"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
serde_json.workspace = true
serde.workspace = true
nom = { version = "7.1.3", optional = true }

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
server = { path = "../server" }
criterion = "0.5.1"
ctor.workspace = true

[[bench]]
name = "parser"
harness = false

[features]
nom = ["dep:nom"]
