[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
debugger = { path = "../debugger" }
server = { path = "../server" }
transport = { path = "../transport" }
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = "0.29.0"
crossterm = "0.29.0"
crossbeam-channel.workspace = true
tree-sitter = "0.25.6"
tree-sitter-python = "0.23.6"
syntect = "5.2.0"
syntect-tui = "3.0.6"
dirs.workspace = true
