[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde.workspace = true
serde_json.workspace = true

# workspace dependencies
state = { path = "../../state" }
launch_configuration = { path = "../../launch_configuration" }
debugger = { path = "../../debugger" }
transport = { path = "../../transport" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
