[package]
name = "dap-gui-async-transport"
version = "0.1.0"
edition = "2024"
description = "Async DAP transport layer using tokio"
license = "MIT OR Apache-2.0"

[lib]
name = "async_transport"

[dependencies]
bytes.workspace = true
futures = "0.3.31"
pin-project-lite = "0.2.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util.workspace = true
tracing = "0.1.41"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
