[package]
name = "dap-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
debugger = { path = "../debugger" }
transport = { path = "../transport" }
server = { path = "../server" }
launch_configuration = { path = "../launch_configuration" }
tokio = { version = "1.48", features = ["sync", "rt-multi-thread", "fs"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
