[package]
name = "dap-gui-debugger"
version = "0.1.0"
edition = "2024"

[lib]
name = "debugger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
eyre.workspace = true
tracing.workspace = true
server = { path = "../server", version = "0.1.0", package = "dap-gui-server" }
serde.workspace = true
serde_json.workspace = true
dap-types = { path = "../dap-types", version = "0.1.0", package = "dap-gui-types" }
async-transport = { path = "../async-transport", version = "0.1.0", package = "dap-gui-async-transport" }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util.workspace = true
tokio-stream = "0.1.16"
futures = "0.3.31"
dirs.workspace = true
launch_configuration = { path = "../launch_configuration", version = "0.1.0", package = "dap-gui-launch-configuration" }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
color-eyre.workspace = true
ctor.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tempfile = "3.23.0"
dap-types = { path = "../dap-types", version = "0.1.0", package = "dap-gui-types" }
server = { path = "../server", version = "0.1.0", package = "dap-gui-server" }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
