[package]
name = "gui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.3"
crossbeam-channel.workspace = true
eyre.workspace = true
tracing.workspace = true
clap.workspace = true
debugger = { path = "../debugger" }
tracing-subscriber.workspace = true
sentry = { version = "0.46.0", optional = true, default-features = false, features = [ "reqwest", "rustls", "backtrace", "contexts", "panic", "debug-images" ] }
# TODO: should not need this
transport = { path = "../transport" }
server = { path = "../server" }
color-eyre.workspace = true
state = { path = "../state" }
dirs.workspace = true
launch_configuration = { path = "../launch_configuration" }
dark-light.workspace = true

[features]
sentry = ["dep:sentry"]
