[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
transport = { path = "../transport" }
nix = { version = "0.30.1", features = ["process"] }
which = "8.0.0"

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
