[package]
name = "dap-gui-state"
version = "0.1.0"
edition = "2024"

[lib]
name = "state"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
debugger = { path = "../debugger", version = "0.1.0", package = "dap-gui-debugger" }
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
