[package]
name = "transport"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
bytes = "1.11.0"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
server = { path = "../server" }
criterion = "0.7.0"
ctor.workspace = true

[[bench]]
name = "parser"
harness = false
