[package]
name = "transport2"
version = "0.1.0"
edition = "2024"
description = "Async DAP transport layer using tokio"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
pin-project-lite = "0.2.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "io-util"] }
tokio-util.workspace = true
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
