[package]
name = "tui-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre.workspace = true
crossterm = "0.29.0"
tokio = { version = "1.48", features = ["sync", "rt-multi-thread", "macros"] }
debugger = { path = "../debugger" }
transport = { path = "../transport" }
eyre.workspace = true
