[package]
name = "tui-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre.workspace = true
crossterm = "0.29.0"
tokio = { version = "1.48", features = ["sync", "rt-multi-thread", "macros", "tracing"] }
debugger = { path = "../debugger" }
transport = { path = "../transport" }
launch_configuration = { path = "../launch_configuration" }
state = { path = "../state" }
server = { path = "../server" }
eyre.workspace = true
clap.workspace = true
dirs = "6"
tracing.workspace = true
tracing-subscriber.workspace = true
console-subscriber = "0.5.0"
fuzzy = { path = "../fuzzy" }
