[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dap-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
crossbeam-channel.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
debugger = { path = "../debugger", version = "0.1.0" }
dap-types = { path = "../dap-types", version = "0.1.0" }
server = { path = "../server", version = "0.1.0" }
state = { path = "../state", version = "0.1.0" }
launch_configuration = { path = "../launch_configuration", version = "0.1.0" }
fuzzy = { path = "../fuzzy", version = "0.1.0" }
async-transport = { path = "../async-transport", version = "0.1.0" }
ui-core = { path = "../ui-core", version = "0.1.0" }
clap.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs.workspace = true
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
serde.workspace = true
serde_json.workspace = true
data-encoding = "2"

[dev-dependencies]
tempfile = "3.23.0"
insta = "1"
ui-core = { path = "../ui-core", version = "0.1.0", features = ["testing"] }
